@startuml Storage Component

' Interfaces
interface JobApplicationStorage
interface UserPrefsStorage
interface DataStorage

' Interface Relationships (Inheritance/Generalization)
DataStorage <|-- JobApplicationStorage
DataStorage <|-- UserPrefsStorage

' Classes
class JsonJobApplicationStorage
class JsonUserPrefsStorage
class DataStorageManager

class JsonSerializableJobApplicationList
class SerializableJobApplication
class JobApplication

' Inheritance/Realization Relationships (Dashed lines with hollow triangles)
JobApplicationStorage <|.. JsonJobApplicationStorage
UserPrefsStorage <|.. JsonUserPrefsStorage
DataStorage <|-- DataStorageManager

' Dependencies/Associations
DataStorageManager --> "1" JobApplicationStorage
DataStorageManager --> "1" UserPrefsStorage

' JsonJobApplicationStorage uses the serializable list
JsonJobApplicationStorage -- JsonSerializableJobApplicationList

JsonSerializableJobApplicationList --- "*" SerializableJobApplication

' Dependency/Association (Dashed arrow) for conversion/mapping
SerializableJobApplication .> JobApplication : deserializes >
JsonSerializableJobApplicationList .> JobApplication : contains

' Title
footer Storage Component

@enduml
